--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,17 @@
 
 
 :root {
-  --primary-color: #2F9B9B;
+  --primary-color: #3eb889;
 
   /* Light Mode */
-  --primary-background-color: #EDEDED;
+  /* --primary-background-color: #EDEDED;
   --secondary-background-color: #ffffff;
-  --text-color: black;
+  --text-color: black; */
 
   /* Dark Mode */
-  /* --primary-background-color: #2b2b2b;
+  --primary-background-color: #2b2b2b;
   --secondary-background-color: #3b3b3b;
-  --text-color: rgb(255, 255, 255); */
+  --text-color: rgb(255, 255, 255);
 }
 
 body {
@@ -84,7 +84,8 @@ body {
   width: calc(100% - 20px);
   justify-self: center;
   display: grid;
-  grid-template-rows: 50px auto;
+  grid-template-rows: auto;
+  /* grid-template-rows: 50px auto; */
 }
 
 .navbarContainer {
