--- a/src/Pages/UploadImage/UploadImage.css
+++ b/src/Pages/UploadImage/UploadImage.css
@@ -18,6 +18,7 @@
     width: calc(100% - 2px);
     border-radius: 3px;
     position: relative;
+    overflow: hidden;
 }
 
 .contentImageInput {
@@ -53,12 +54,19 @@
 }
 
 .contentImagePreviewPlaceholder {
-    height: 123px;
+    height: 121px;
     width: 200px;
-    cursor: pointer;
+    cursor: initial;
     background-color: var(--primary-background-color);
-    border: 1px solid rgb(124, 124, 124);
+    border: 2px solid rgb(80, 80, 80);
     border-radius: 3px;
+    display: grid;
+    align-items: center;
+    justify-items: center;
+}
+
+.contentImagePreviewPlaceholder:nth-child(0) {
+    margin-left: 0px;
 }
 
 .contentImagePreview {
@@ -67,10 +75,12 @@
     margin-left: 10px;
     cursor: pointer;
     border-radius: 3px;
+    border: 2px solid rgb(80, 80, 80);
 }
 
 .contentImagePreviewSelected {
     border: 2px solid var(--primary-color);
+    cursor: initial;
 }
 
 .contentImagePreview:nth-child(1) {
@@ -79,7 +89,7 @@
 
 .contentFooterWrapper {
     display: grid;
-    grid-template-columns: 50px 50px auto;
+    grid-template-columns: 125px 125px auto;
     column-gap: 10px;
 }
 
@@ -87,18 +97,94 @@
     border: 0px;
     border-radius: 3px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-    background-color: var(--secondary-background-color);
+    background-color: var(--primary-color);
     cursor: pointer;
-    color: var(--primary-color);
-    font-size: 18px;
+    color: white;
+    font-size: 14px;
     position: relative;
 }
 
-.contentDiasbled {
+.uploadImageIcon {
+    margin-right: 10px;
+    font-size: 16px;
+}
+
+.contentDisabled {
     opacity: 0.4;
     pointer-events: none;
 }
 
-.contentFooterSubmitButton {
+.contentFooterInfoContainer {
+    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.5);
+    background-color: var(--primary-background-color);
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    grid-template-columns: 1fr 1px 1fr;
+    border-radius: 3px;
+}
 
+.contentFooterInfoText {
+    color: var(--text-color);
+    margin: 0px;
+    font-size: 14px;
+}
+
+.contentFooterInfoDivider {
+    width: 1px;
+    height: 60%;
+    background-color: var(--text-color);
+}
+
+.loadingBackdrop {
+    position: absolute;
+    display: grid;
+    align-items: center;
+    justify-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
+    top: 0;
+    left: 0;
+    z-index: 100000;
+    height: 100%;
+    width: 100%;
+    border-radius: 3px;
+}
+
+.contentImageInputInfoContainer {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: fit-content;
+    width: fit-content;
+    display: grid;
+    grid-template-rows: auto auto;
+    justify-items: center;
+}
+
+.contentImageInputInfoIconContainer {
+    width: fit-content;
+    padding: 10px 0px;
+    border-radius: 3px;
+}
+
+.contentImageInputInfoIcon {
+    font-size: 48px;
+    color: var(--text-color);
+
+}
+
+.contentImageInputInfoIconText {
+    color: var(--text-color);
+    text-align: center;
+}
+
+.fileInputAddImagesButton {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    top: 0;
+    left: 0;
+    cursor: pointer;
 }
